add kh3 game link

--- a/index.html
+++ b/index.html
@@ -53,6 +53,14 @@
                                 <img src="https://static-cdn.jtvnw.net/ttv-boxart/518379_IGDB-285x380.jpg" alt="Imagem do Jogo Pokémon Unite">
                             </a>
                         </li>
+
+                        <li>
+                            <a 
+                            target="_blank"
+                            href="https://www.twitch.tv/directory/game/Kingdom%20Hearts%20III">
+                                <img src="https://static-cdn.jtvnw.net/ttv-boxart/369585_IGDB-144x192.jpg" alt="Imagem do Jogo Kingdom Hearts III">
+                            </a>
+                        </li>
                     </ul>
                 </div>
             </section>
