--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
         <meta charset="UTF-8"> <!--configuração de caracter que pode usar acentuação-->
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>NLW Esports</title>
+        <title>NLW eSports</title>
 
         <link rel="stylesheet" href="./styles.css">
 
