github nickname update

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
         <header>
             <div>
-                <img src="https://github.com/koiti13.png" 
+                <img src="https://github.com/caiotakahata.png" 
                 alt="Foto de Caio Takahata">
             </div>
         </header>
